# libuca

./: .gitignore  .travis.yml  CMakeLists.txt  INSTALL  NEWS  README  README.md  build_on_windows.bat  conanfile.py  libuca.spec.in  meson.build  meson_options.txt  package.sh.in
.github/workflows/: apt.yml  conan.yml  tests.yml
cmake/: ConfigurePaths.cmake  FindAndor.cmake  FindClSerMe4.cmake  FindClSerSis.cmake  FindDEXELA.cmake  FindFgLib5.cmake  FindIPE.cmake  FindPCO.cmake  FindPF.cmake  FindPylon.cmake  FindTango.cmake  FindYAT.cmake  SisoLibDir.cmake
conan/: windows_release
doc/: CMakeLists.txt  Doxyfile.in  publish.sh.in
docs/: Makefile  api.rst  base.html  cameras.rst  concert.rst  conf.py  file.rst  gen-changelog  index.rst  manual.md  mock.html  mock.rst  pco.html  pco.rst  pf.html  python-tango.rst  quickstart.rst  remote.rst  style.css  tango.rst  tools.rst  uca-net.rst  ufo.html  update-changelog  update-props.py  webfonts.html  z-changes-1.0.md
gui/: CMakeLists.txt  config.h.in
misc/: README.rst  opencv-2.2.0.patch
plugins/: CMakeLists.txt  meson.build  package-plugin-andor.sh  package-plugin.sh.in
plugins/andor/: CMakeLists.txt  uca-andor-camera.c  uca-andor-camera.h
plugins/dexela/: .swp.CMakeLists.txt  CMakeLists.txt  changelog.txt  software-roi.c  software-roi.h  uca-dexela-camera.c  uca-dexela-camera.h  ucadexela.spec.in
plugins/file/: CMakeLists.txt  meson.build  uca-file-camera.c  uca-file-camera.h
plugins/kiro/: CMakeLists.txt  uca-kiro-camera.c  uca-kiro-camera.cpp  uca-kiro-camera.h
plugins/mock/: CMakeLists.txt  meson.build  uca-mock-camera.c  uca-mock-camera.h
plugins/pco/: CMakeLists.txt  uca-pco-camera.c  uca-pco-camera.h
plugins/pf/: CMakeLists.txt  uca-pf-camera.c  uca-pf-camera.h
plugins/pylon/: CMakeLists.txt  changelog.txt  uca-pylon-camera.c  uca-pylon-camera.h
plugins/ufo/: CMakeLists.txt  uca-ufo-camera.c  uca-ufo-camera.h
plugins/xkit/: CMakeLists.txt  uca-xkit-camera.c  uca-xkit-camera.cc  uca-xkit-camera.h
src/: CMakeLists.txt  compat.h  config.h.in  config.h.meson.in  libuca.pc.in  meson.build  scangobj.sh.in  uca-api.h  uca-cam.c  uca-cam.h  uca-camera.c  uca-camera.h  uca-docs.xml.in  uca-enums.c.template  uca-enums.h.template  uca-grabber.h  uca-plugin-manager.c  uca-plugin-manager.h  uca-ring-buffer.c  uca-ring-buffer.h  uca.c  uca.h  uca.i  uca.pc.in  uca.types.in
src/cameras/: dummy.c  dummy.h  ipe.c  ipe.h  pco.c  pco.h  pf.c  pf.h  pylon_camera.cpp  pylon_camera.h  simple.c  simple.h  uca-dexela-camera.c  uca-mock-camera.c  uca-mock-camera.h  uca-pco-camera.c  uca-pco-camera.h  uca-pf-camera.c  uca-pf-camera.h  uca-pylon-camera.c  uca-pylon-camera.h  uca-ufo-camera.c  uca-ufo-camera.h  uca_pco.c  uca_pco.h
src/grabbers/: me4.c  me4.h
tango/: README.md  Uca  setup.py  stress-test.py
test/: CMakeLists.txt  benchmark.c  control.c  control.glade  egg-property-cell-renderer.c  egg-property-cell-renderer.h  egg-property-tree-view.c  enum.c  grab-async.c  grab.c  grab_pylon.c  gtester.xsl  meson.build  perf-overhead.c  run.py  test-all.c  test-gobject.c  test-mock.c  test-ring-buffer.c  test-software-roi.c  test.c
tools/: CMakeLists.txt  benchmark.c  gen-doc.c  grab-async.c  grab.c  perf-overhead.c  ring-buffer.c
tools/gui/: CMakeLists.txt  control.c  control.glade  egg-histogram-view.c  egg-histogram-view.h  egg-property-tree-view.c  ring-buffer.c  ring-buffer.h
